--- a/의존 구문 분석.ipynb
+++ b/의존 구문 분석.ipynb
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ETRI 언어 분석 API\n",
     "openApiURL = \"http://epretx.etri.re.kr:8000/api/WiseNLU\" \n",
     "\n",
-    "accessKey = \"f849f398-1da0-4f86-aa7b-386431728b99\"\n",
+    "accessKey = \"\" # ETRI 기술 사전 체험 플랫폼에 회원가입 후 얻은 개별 API Key\n",
     "    \n",
     "analysisCode = \"dparse\" # 의존 구문 분석\n",
     "\n",
-    "text = str(\"뜻을 공유하고 소통하는 관계인지, 아니면 다른 무엇인지 궁금해진다. 하지만 사람이 하는 일이라 알 수 있겠나”라고 말했다.\")\n",
+    "text = str(\"상처를 보고 텔레비전 프로그램에 제보해야겠다고 생각했다”고 증언했다.\")\n",
     "\n",
     "requestJson = {\n",
     "    \"argument\": {\n",
@@ -43,14 +43,14 @@
     "\n",
     "result = json.loads(response.data.decode('utf-8'))\n",
     "\n",
-    "with open(text[:10]+'.json', 'w', encoding='utf-8') as json_file:\n",
+    "with open('text.json', 'w', encoding='utf-8') as json_file:\n",
     "    json.dump(result, json_file, indent=4, ensure_ascii=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "syncomplex",
+   "display_name": "constant",
    "language": "python",
    "name": "python3"
   },
@@ -64,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.9.19"
   },
   "orig_nbformat": 4
  },
