--- a/Automatic Syntactic Complexity Analyzer.ipynb
+++ b/Automatic Syntactic Complexity Analyzer.ipynb
@@ -3,7 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 1722,
+     "status": "ok",
+     "timestamp": 1763865248027,
+     "user": {
+      "displayName": "Constant Na",
+      "userId": "15245543245754550095"
+     },
+     "user_tz": -540
+    },
+    "id": "WzxMIN3LjxvD"
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -15,9 +27,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 6,
+     "status": "ok",
+     "timestamp": 1763865248038,
+     "user": {
+      "displayName": "Constant Na",
+      "userId": "15245543245754550095"
+     },
+     "user_tz": -540
+    },
+    "id": "IHXctySYjxvE",
+    "outputId": "49265f69-bbe1-4b2f-b11b-52c4d8bc7070"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 기본 형식 점수 계산\n",
     "\n",
@@ -64,15 +103,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 4,
+     "status": "ok",
+     "timestamp": 1763865250246,
+     "user": {
+      "displayName": "Constant Na",
+      "userId": "15245543245754550095"
+     },
+     "user_tz": -540
+    },
+    "id": "ET9joNkrjxvE",
+    "outputId": "1e317ef0-2f24-4ea3-9fb2-9bbd35b2f4f9"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.0]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 수식 구조 점수 계산\n",
     "\n",
     "add1_score_per_sent = [] # 각 문장의 수식 구조 점수\n",
     "\n",
-    "for sentence in data['return_object']['sentence']: \n",
+    "for sentence in data['return_object']['sentence']:\n",
     "    add1_score = 0 # 특정 문장의 수식 구조 점수\n",
     "    for dep in sentence['dependency']:\n",
     "        if dep['label'] in ['NP_MOD', 'X_MOD', 'DP', 'NP_AJT', 'AP_AJT', 'X_AJT', 'NP_INT', 'IP']: # 관형어/부사어/독립어 찾기\n",
@@ -96,9 +162,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 46,
+     "status": "ok",
+     "timestamp": 1763865252296,
+     "user": {
+      "displayName": "Constant Na",
+      "userId": "15245543245754550095"
+     },
+     "user_tz": -540
+    },
+    "id": "bnNfiPvFjxvE",
+    "outputId": "0bbf70d6-cbeb-4e70-e031-aaf1538a6eff"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 내포 구조 점수 계산\n",
     "\n",
@@ -241,18 +334,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dep['mod']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 7,
+     "status": "ok",
+     "timestamp": 1763865258775,
+     "user": {
+      "displayName": "Constant Na",
+      "userId": "15245543245754550095"
+     },
+     "user_tz": -540
+    },
+    "id": "fVSG72JUjxvF",
+    "outputId": "c0011651-bc36-45e9-cbe1-3c6f886a2fb2"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 접속 구조 점수 계산\n",
     "\n",
@@ -281,9 +392,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 7,
+     "status": "ok",
+     "timestamp": 1763865261209,
+     "user": {
+      "displayName": "Constant Na",
+      "userId": "15245543245754550095"
+     },
+     "user_tz": -540
+    },
+    "id": "oDtnEVjCjxvF",
+    "outputId": "a4dbe638-103b-4877-e07e-46c8df0583af"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[14.0]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 합산 점수 계산\n",
     "sum_score_per_sent = [a + b + c + d for a, b, c, d in zip(basic_score_per_sent, add1_score_per_sent, add2_score_per_sent, add3_score_per_sent)]\n",
@@ -292,16 +430,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 89
+    },
+    "executionInfo": {
+     "elapsed": 150,
+     "status": "ok",
+     "timestamp": 1763865262968,
+     "user": {
+      "displayName": "Constant Na",
+      "userId": "15245543245754550095"
+     },
+     "user_tz": -540
+    },
+    "id": "vedvpLIzjxvF",
+    "outputId": "062a926c-34fa-4d01-90b9-efd442e4a0a3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.google.colaboratory.intrinsic+json": {
+       "summary": "{\n  \"name\": \"df_result_final\",\n  \"rows\": 1,\n  \"fields\": [\n    {\n      \"column\": \"\\ubb38\\uc7a5\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"\\uc0c1\\ucc98\\ub97c \\ubcf4\\uace0 \\ud154\\ub808\\ube44\\uc804 \\ud504\\ub85c\\uadf8\\ub7a8\\uc5d0 \\uc81c\\ubcf4\\ud574\\uc57c\\uaca0\\ub2e4\\uace0 \\uc0dd\\uac01\\ud588\\ub2e4\\u201d\\uace0 \\uc99d\\uc5b8\\ud588\\ub2e4.\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\uae30\\ubcf8 \\ud615\\uc2dd\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 7,\n        \"max\": 7,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          7\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\uc218\\uc2dd\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 1.0,\n        \"max\": 1.0,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          1.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\ub0b4\\ud3ec\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 5,\n        \"max\": 5,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\uc811\\uc18d\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 1,\n        \"max\": 1,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\ud569\\uc0b0\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 14.0,\n        \"max\": 14.0,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          14.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}",
+       "type": "dataframe",
+       "variable_name": "df_result_final"
+      },
+      "text/html": [
+       "\n",
+       "  <div id=\"df-d5e1b2d8-c60d-475b-b4b7-f6f4f4e23c7c\" class=\"colab-df-container\">\n",
+       "    <div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>문장</th>\n",
+       "      <th>기본 형식</th>\n",
+       "      <th>수식</th>\n",
+       "      <th>내포</th>\n",
+       "      <th>접속</th>\n",
+       "      <th>합산</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>상처를 보고 텔레비전 프로그램에 제보해야겠다고 생각했다”고 증언했다.</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>\n",
+       "    <div class=\"colab-df-buttons\">\n",
+       "\n",
+       "  <div class=\"colab-df-container\">\n",
+       "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d5e1b2d8-c60d-475b-b4b7-f6f4f4e23c7c')\"\n",
+       "            title=\"Convert this dataframe to an interactive table.\"\n",
+       "            style=\"display:none;\">\n",
+       "\n",
+       "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+       "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+       "  </svg>\n",
+       "    </button>\n",
+       "\n",
+       "  <style>\n",
+       "    .colab-df-container {\n",
+       "      display:flex;\n",
+       "      gap: 12px;\n",
+       "    }\n",
+       "\n",
+       "    .colab-df-convert {\n",
+       "      background-color: #E8F0FE;\n",
+       "      border: none;\n",
+       "      border-radius: 50%;\n",
+       "      cursor: pointer;\n",
+       "      display: none;\n",
+       "      fill: #1967D2;\n",
+       "      height: 32px;\n",
+       "      padding: 0 0 0 0;\n",
+       "      width: 32px;\n",
+       "    }\n",
+       "\n",
+       "    .colab-df-convert:hover {\n",
+       "      background-color: #E2EBFA;\n",
+       "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+       "      fill: #174EA6;\n",
+       "    }\n",
+       "\n",
+       "    .colab-df-buttons div {\n",
+       "      margin-bottom: 4px;\n",
+       "    }\n",
+       "\n",
+       "    [theme=dark] .colab-df-convert {\n",
+       "      background-color: #3B4455;\n",
+       "      fill: #D2E3FC;\n",
+       "    }\n",
+       "\n",
+       "    [theme=dark] .colab-df-convert:hover {\n",
+       "      background-color: #434B5C;\n",
+       "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+       "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+       "      fill: #FFFFFF;\n",
+       "    }\n",
+       "  </style>\n",
+       "\n",
+       "    <script>\n",
+       "      const buttonEl =\n",
+       "        document.querySelector('#df-d5e1b2d8-c60d-475b-b4b7-f6f4f4e23c7c button.colab-df-convert');\n",
+       "      buttonEl.style.display =\n",
+       "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+       "\n",
+       "      async function convertToInteractive(key) {\n",
+       "        const element = document.querySelector('#df-d5e1b2d8-c60d-475b-b4b7-f6f4f4e23c7c');\n",
+       "        const dataTable =\n",
+       "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+       "                                                    [key], {});\n",
+       "        if (!dataTable) return;\n",
+       "\n",
+       "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+       "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+       "          + ' to learn more about interactive tables.';\n",
+       "        element.innerHTML = '';\n",
+       "        dataTable['output_type'] = 'display_data';\n",
+       "        await google.colab.output.renderOutput(dataTable, element);\n",
+       "        const docLink = document.createElement('div');\n",
+       "        docLink.innerHTML = docLinkHtml;\n",
+       "        element.appendChild(docLink);\n",
+       "      }\n",
+       "    </script>\n",
+       "  </div>\n",
+       "\n",
+       "\n",
+       "  <div id=\"id_fe0a518d-906c-482f-ae58-bcca2174f990\">\n",
+       "    <style>\n",
+       "      .colab-df-generate {\n",
+       "        background-color: #E8F0FE;\n",
+       "        border: none;\n",
+       "        border-radius: 50%;\n",
+       "        cursor: pointer;\n",
+       "        display: none;\n",
+       "        fill: #1967D2;\n",
+       "        height: 32px;\n",
+       "        padding: 0 0 0 0;\n",
+       "        width: 32px;\n",
+       "      }\n",
+       "\n",
+       "      .colab-df-generate:hover {\n",
+       "        background-color: #E2EBFA;\n",
+       "        box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+       "        fill: #174EA6;\n",
+       "      }\n",
+       "\n",
+       "      [theme=dark] .colab-df-generate {\n",
+       "        background-color: #3B4455;\n",
+       "        fill: #D2E3FC;\n",
+       "      }\n",
+       "\n",
+       "      [theme=dark] .colab-df-generate:hover {\n",
+       "        background-color: #434B5C;\n",
+       "        box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+       "        filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+       "        fill: #FFFFFF;\n",
+       "      }\n",
+       "    </style>\n",
+       "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('df_result_final')\"\n",
+       "            title=\"Generate code using this dataframe.\"\n",
+       "            style=\"display:none;\">\n",
+       "\n",
+       "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+       "       width=\"24px\">\n",
+       "    <path d=\"M7,19H8.4L18.45,9,17,7.55,7,17.6ZM5,21V16.75L18.45,3.32a2,2,0,0,1,2.83,0l1.4,1.43a1.91,1.91,0,0,1,.58,1.4,1.91,1.91,0,0,1-.58,1.4L9.25,21ZM18.45,9,17,7.55Zm-12,3A5.31,5.31,0,0,0,4.9,8.1,5.31,5.31,0,0,0,1,6.5,5.31,5.31,0,0,0,4.9,4.9,5.31,5.31,0,0,0,6.5,1,5.31,5.31,0,0,0,8.1,4.9,5.31,5.31,0,0,0,12,6.5,5.46,5.46,0,0,0,6.5,12Z\"/>\n",
+       "  </svg>\n",
+       "    </button>\n",
+       "    <script>\n",
+       "      (() => {\n",
+       "      const buttonEl =\n",
+       "        document.querySelector('#id_fe0a518d-906c-482f-ae58-bcca2174f990 button.colab-df-generate');\n",
+       "      buttonEl.style.display =\n",
+       "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+       "\n",
+       "      buttonEl.onclick = () => {\n",
+       "        google.colab.notebook.generateWithVariable('df_result_final');\n",
+       "      }\n",
+       "      })();\n",
+       "    </script>\n",
+       "  </div>\n",
+       "\n",
+       "    </div>\n",
+       "  </div>\n"
+      ],
+      "text/plain": [
+       "                                       문장  기본 형식   수식  내포  접속    합산\n",
+       "0  상처를 보고 텔레비전 프로그램에 제보해야겠다고 생각했다”고 증언했다.      7  1.0   5   1  14.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sentence_list = [x['text'] for x in data['return_object']['sentence']]\n",
     "df_result_final = pd.DataFrame({'문장': sentence_list,\n",
-    "                                '기본 형식': basic_score_per_sent, \n",
+    "                                '기본 형식': basic_score_per_sent,\n",
     "                                '수식': add1_score_per_sent,\n",
     "                                '내포': add2_score_per_sent,\n",
-    "                                '접속': add3_score_per_sent, \n",
+    "                                '접속': add3_score_per_sent,\n",
     "                                '합산': sum_score_per_sent})\n",
     "\n",
     "df_result_final"
@@ -310,7 +662,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "VjyZ31KFjxvF"
+   },
    "outputs": [],
    "source": [
     "df_result_final.to_excel('df_result.xlsx')"
@@ -318,6 +672,9 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "constant",
    "language": "python",
@@ -338,5 +695,5 @@
   "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
